<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

        <EditText
            android:id="@+id/loginUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="50dp"
            style="@android:style/Widget.Material.EditText"
            android:hint="@string/loginUsernameEditText"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="35dp"
            android:hint="@string/loginPasswordEditText"
            style="@android:style/Widget.Material.EditText"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/loginPasswordOrUsernameForgottenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/loginPasswordOrUsernameForgottenTextView"
            android:textColor="#1e5db2" />

        <Button
            android:id="@+id/loginSignInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@android:style/Widget.Material.Button"
            android:text="@string/loginSignInBtn"
            android:enabled="false" />
        
        <Button
            android:id="@+id/loginSignUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@android:style/Widget.Material.Button"
            android:text="@string/loginSignUpBtn" />

</LinearLayout>