<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WalletBackupActivity">


    <TextView
        android:id="@+id/text_backup_seed_explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_walletBackupSeedExplanation"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true" />

    <ProgressBar
        android:id="@+id/progress_bar_mnemonic"
        style="@android:style/Widget.Material.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_backup_seed_explanation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:indeterminateOnly="true"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/settings_walletBackupSeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_backup_seed_explanation"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text=""
        android:height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings_walletBackupSeedTitle"
        android:textColor="@android:color/primary_text_light"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings_walletBackupRefundTransactionTitle"
        android:textColor="@android:color/primary_text_light"
        android:id="@+id/textView2"
        android:layout_below="@+id/settings_walletBackupSeed"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_walletBackupRefundTransactionExplanation"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_walletBackupRefundTransactionButtonText"
        android:id="@+id/walletBackup_emailRefundTxButton"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:enabled="false" />


</RelativeLayout>
